objects/VLE_Sync_Command__c.object
<CustomObject><fields>
        <fullName>Command__c</fullName>
        <description>Type of command</description>
        <label>Command</label>
        <length>32</length>
        <required>true</required>
        <type>Text</type>
    </fields><fields>
        <fullName>Error_Count__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Number of errors</description>
        <label>Error Count</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Last_Error_Message__c</fullName>
        <description>Text of last error message</description>
        <label>Last Error Message</label>
        <type>TextArea</type>
    </fields><fields>
        <fullName>Linked_Record__c</fullName>
        <formula>If ( Name = "DEFAULT_MODULE", "Not Available", HYPERLINK(Name, "Click Here"))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Linked Record</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Obj_Type__c</fullName>
        <description>Indicates name of related to synchronization object</description>
        <label>Obj Type</label>
        <picklist>
            <picklistValues>
                <fullName>Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Student_Programme__c</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Order__c</fullName>
        <description>Order by number</description>
        <label>Order</label>
        <precision>5</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Params__c</fullName>
        <description>Additional parameters for command in the JSON format</description>
        <label>Params</label>
        <length>256</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>Status__c</fullName>
        <description>Current status of API call. New - just created, Error - some trouble and Done - for calls that have been succesfully processed.</description>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Done</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>VLE_Action__c</fullName>
        <label>VLE Action</label>
        <referenceTo>VLE_Action__c</referenceTo>
        <relationshipLabel>VLE Sync Commands</relationshipLabel>
        <relationshipName>VLE_Sync_Commands</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields><allowInChatterGroups>false</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><description>Simple VLE API calls to perform only single API methods</description><enableActivities>false</enableActivities><enableBulkApi>true</enableBulkApi><enableFeeds>false</enableFeeds><enableHistory>false</enableHistory><enableReports>true</enableReports><enableSearch>false</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><externalSharingModel>ControlledByParent</externalSharingModel><label>VLE Sync Command</label><nameField>
        <label>VLE Sync Command Name</label>
        <type>Text</type>
    </nameField><pluralLabel>VLE Sync Commands</pluralLabel><sharingModel>ControlledByParent</sharingModel></CustomObject>